# fail-cast

./: CMakeLists.txt  README.md
cfg/: PVS-Studio.cfg
src/: main.cpp
